--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+  Proyecto: CRM Salvatrade
+  Desarrollado por: Rigoberto Recinos
+  Fecha: Julio 2024
+  Contacto: sidrigobert32@gmail.com
+-->
+
+
 <!DOCTYPE html>
 <html lang="es">
 
