--- a/index.html
+++ b/index.html
@@ -358,6 +358,11 @@
             <span data-toggle="counter-up" class="plus-sign">1000</span>
             <p>Importaciones</p>
           </div>
+
+           <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up" class="plus-sign">20</span>
+            <p>Colaboradores en Hong Kong, El Salvador y Guatemala</p>
+          </div>
         </div>
 
       </div>
@@ -494,4 +499,5 @@
 </body>
 
 </html>
+
 
