--- a/misiones.html
+++ b/misiones.html
@@ -66,7 +66,7 @@
             <div class="carousel-background"><img src="img/intro-carousel/3.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="texto-sombra">FERIA DE CANTON CHINA 2025</h2>
+                <h2 class="texto-sombra">FERIA DE CANTON CHINA 2026</h2>
               </div>
             </div>
           </div>
@@ -251,7 +251,7 @@
 
           <div class="col-lg-12 col-12 text-center">
             <span data-toggle="counter-up"class="dollar-sign">4000</span>
-            <p>INVERSIÓN MÍNIMA PARA LA FERIA DE CANTÓN EN CHINA</p>
+            <p>INVERSIÓN MÍNIMA PARA ASISTIR A LA FERIA DE CANTÓN EN CHINA</p>
           </div>
           
         </div>
@@ -422,4 +422,5 @@
 </body>
 
 </html>
+
 
