--- a/misiones.html
+++ b/misiones.html
@@ -143,7 +143,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="mu-about-left">
-                <img class="" src="img/fases primavera otoño.png" alt="img">
+                <img class="" src="img/fases.png" alt="img">
               </div>
             </div>
             <div class="col-md-12">
@@ -422,5 +422,6 @@
 </body>
 
 </html>
+
 
 
