--- a/misiones.html
+++ b/misiones.html
@@ -141,13 +141,14 @@
           </div>
           <!-- Start Feature Content -->
           <div class="row">
-            <div class="col-md-12">
-              <div class="mu-about-left">
-                <img class="" src="img/fases.png" alt="img">
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="mu-about-right">
+  <div class="col-md-12">
+    <div class="mu-about-left position-relative text-center">
+      <h4 class="mu-title-overlay">Fases de la Feria de Cantón</h4>
+  </div>
+  </div>
+
+  <div class="col-md-12">
+    <div class="mu-about-right">
                 <ul>
                   <li>
                     <h3>Fase 1</h3>
@@ -422,6 +423,7 @@
 </body>
 
 </html>
+
 
 
 
