--- a/misiones.html
+++ b/misiones.html
@@ -143,7 +143,9 @@
           <div class="row">
   <div class="col-md-12">
     <div class="mu-about-left position-relative text-center">
-      <h4 class="mu-title-overlay">Fases de la Feria de Cantón</h4>
+<header class="section-header wow fadeInUp">
+      <h3>FASES DE LA FERIA DE CANTON</h3>
+    </header>
   </div>
   </div>
 
@@ -429,6 +431,7 @@
 </body>
 
 </html>
+
 
 
 
